--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+build/
+dist/
+
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -23,8 +26,7 @@ hs_err_pid*
 .LSOverride
 
 # Icon must ends with two \r.
-Icon
-
+Icon
 # Thumbnails
 ._*
 
